Bug 388424 - abort when clicking on favorites folder
Summary: abort when clicking on favorites folder
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-01 14:19 UTC by Martin Koller
Modified: 2018-01-01 14:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2018-01-01 14:19:58 UTC
kmail built from source as of today.
After starting kmail, enter some text in the filter line edit above the folder tree (tree gets reduced to some folders), then click on a favorite folder -> abort.
Problem is in akonadi/src/widgets/standardactionmanager.cpp favoriteSelectionChanged()
line 587 where the selection.indexes() calls first() but the list is actually empty.

#0  0x00007ffff16948d7 in raise () from /lib64/libc.so.6
#1  0x00007ffff1695caa in abort () from /lib64/libc.so.6
#2  0x00007ffff2340dae in QMessageLogger::fatal(char const*, ...) const () from /usr/lib64/libQt5Core.so.5
#3  0x00007ffff233c0c6 in qt_assert(char const*, char const*, int) () from /usr/lib64/libQt5Core.so.5
#4  0x00007fffeb7ea47a in QList<QModelIndex>::first (this=0x7fffffffbdb0) at /usr/include/qt5/QtCore/qlist.h:345
#5  0x00007fffeb804477 in Akonadi::StandardActionManager::Private::favoriteSelectionChanged (this=0xe56f20)
    at /home/KDE5/source/kde/pim/akonadi/src/widgets/standardactionmanager.cpp:587
#6  0x00007fffeb8000cc in Akonadi::StandardActionManager::qt_static_metacall (_o=0xe49e70, _c=QMetaObject::InvokeMetaMethod, _id=4, 
    _a=0x7fffffffbf80) at /home/KDE5/source/build/kde/pim/akonadi/src/widgets/moc_standardactionmanager.cpp:258
#7  0x00007ffff253f3df in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#8  0x00007ffff24cdc67 in QItemSelectionModel::selectionChanged(QItemSelection const&, QItemSelection const&) ()
   from /usr/lib64/libQt5Core.so.5
#9  0x00007ffff24d098a in QItemSelectionModel::emitSelectionChanged(QItemSelection const&, QItemSelection const&) ()
   from /usr/lib64/libQt5Core.so.5
#10 0x00007ffff24d187a in QItemSelectionModel::select(QItemSelection const&, QFlags<QItemSelectionModel::SelectionFlag>) ()
   from /usr/lib64/libQt5Core.so.5
#11 0x00007ffff3491af7 in QListView::setSelection(QRect const&, QFlags<QItemSelectionModel::SelectionFlag>) ()
   from /usr/lib64/libQt5Widgets.so.5
#12 0x00007ffff345a550 in QAbstractItemView::mousePressEvent(QMouseEvent*) () from /usr/lib64/libQt5Widgets.so.5
#13 0x00007ffff0b0a842 in MailCommon::FavoriteCollectionWidget::mousePressEvent (this=0xe5b690, e=0x7fffffffc920)
    at /home/KDE5/source/kde/pim/mailcommon/src/widgets/favoritecollectionwidget.cpp:79
#14 0x00007ffff325e590 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#15 0x00007ffff330112e in QFrame::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#16 0x00007ffff345f04b in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#17 0x00007ffff2514fe1 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) ()
   from /usr/lib64/libQt5Core.so.5
#18 0x00007ffff32226f5 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
---Type <return> to continue, or q <return> to quit---
#19 0x00007ffff3229b9c in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#20 0x00007ffff2515115 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#21 0x00007ffff3228a19 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQt5Widgets.so.5
#22 0x00007ffff3276a6f in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /usr/lib64/libQt5Widgets.so.5
#23 0x00007ffff3278f83 in QWidgetWindow::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#24 0x00007ffff322271c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#25 0x00007ffff3229500 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#26 0x00007ffff2515115 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#27 0x00007ffff2a8308d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) ()
   from /usr/lib64/libQt5Gui.so.5
#28 0x00007ffff2a84c45 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) ()
   from /usr/lib64/libQt5Gui.so.5
#29 0x00007ffff2a636bb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib64/libQt5Gui.so.5
#30 0x00007fffc8435b6b in QPAEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib64/libQt5XcbQpa.so.5
#31 0x00007ffff251383b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#32 0x00007ffff251bef4 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#33 0x00000000004047fa in main (argc=1, argv=0x7fffffffd2e8) at /home/KDE5/source/kde/pim/kmail/src/main.cpp:156
Comment 1 Laurent Montel 2018-01-01 14:36:53 UTC
Git commit a14c6836b2f7a24a7e4af6f8b3adba8fb852ad4a by Laurent Montel.
Committed on 01/01/2018 at 14:36.
Pushed by mlaurent into branch 'master'.

Fix Bug 388424 - abort when clicking on favorites folder

M  +3    -1    src/widgets/standardactionmanager.cpp

https://commits.kde.org/akonadi/a14c6836b2f7a24a7e4af6f8b3adba8fb852ad4a