Fix Bug 388424 - abort when clicking on favorites folder

BUG: 388424